<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/my_grey"
    >

    <TextView
        android:id="@+id/notesHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins_bold"
        android:textSize="24sp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchBar"
        android:hint="@string/search"
        android:background="@drawable/orange_border"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:backgroundTint="@color/light_grey"
        app:layout_constraintTop_toBottomOf="@+id/notesHeading"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/searchBar"
        />

    <TextView
        android:id="@+id/noNotesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/no_notes"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/notesRecyclerView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/notesRecyclerView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:contentDescription="@string/add_button"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/baseline_add_24"
        android:backgroundTint="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/orange"
        />





</androidx.constraintlayout.widget.ConstraintLayout>